feat(backend-auth): add auth module
